--- a/.github/workflows/test_onnxruntime_train.yml
+++ b/.github/workflows/test_onnxruntime_train.yml
@@ -25,12 +25,16 @@ jobs:
           python-version: 3.8
 
       - name: Install dependencies
+        env:
+          TORCH_CUDA_ARCH_LIST: "5.0 6.0 7.0 7.5 8.0 8.6 9.0+PTX"
         run: |
           pip install --upgrade pip
-          pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu124
+          pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
+          pip install --no-cache-dir torch-ort onnxruntime-training && python -m torch_ort.configure
           pip install .[tests,onnxruntime-gpu]
 
       - name: Test with pytest
+        working-directory: tests
         run: |
           RUN_SLOW=1 pytest onnxruntime/training/nightly_test_trainer.py --durations=0 -s -vvvv
           RUN_SLOW=1 pytest onnxruntime/training/nightly_test_examples.py --durations=0 -s -vvvv
