--- a/.github/workflows/test_onnxruntime_gpu.yml
+++ b/.github/workflows/test_onnxruntime_gpu.yml
@@ -34,6 +34,10 @@ jobs:
           pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu124
           pip install .[tests,onnxruntime-gpu]
 
+      - name: Replace opencv-python with opencv-python-headless
+        run: |
+          pip uninstall -y opencv-python && pip install opencv-python-headless
+
       - name: Test with pytest
         run: |
           pytest tests/onnxruntime -m "cuda_ep_test or cuda_trt_test" --durations=0 -vvvv -s -n auto
