--- a/.github/workflows/dev_test_bettertransformer.yml
+++ b/.github/workflows/dev_test_bettertransformer.yml
@@ -24,6 +24,8 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - if: ${{ matrix.os == 'macos-13' }}
+      run: pip install numpy==1.*
     - name: Install dependencies
       run: |
         pip install .[tests]
